# Manifexa

./: .gitignore  README.md  pyproject.toml
manifexa/: app.py  cli.py  promote.py  tui.py  tui_app.py  viz.py
manifexa/discovery/: core.py  semantic.py
manifexa/eminexa/: __init__.py  clean.py  ingest.py  node.py  people.py  resolve.py  scholar.py
manifexa/graph/: arcadedb_engine.py  engine.py  factory.py  neo4j_engine.py  networkx_engine.py  sync.py
manifexa/llm/: __init__.py  connect.py  operations.py  provider.py
manifexa/sources/: crossref.py  enrich.py  extract.py  http.py  openalex.py  semanticscholar.py
manifexa/store/: cache.py  entity.py  frontmatter.py  node.py  schema.py  slug.py  snapshot.py  vault.py
obsidian-plugin/: README.md  main.js  manifest.json
tests/: test_app.py  test_arcadedb_engine.py  test_cache.py  test_connect.py  test_crossref.py  test_discovery.py  test_eminexa_app.py  test_eminexa_clean.py  test_eminexa_discovery.py  test_eminexa_dispatch.py  test_eminexa_ingest.py  test_eminexa_node.py  test_eminexa_people.py  test_eminexa_polish.py  test_eminexa_resolve.py  test_eminexa_scholar.py  test_eminexa_smoke.py  test_eminexa_viz.py  test_eminexa_window.py  test_enrich.py  test_entity.py  test_extract.py  test_factory.py  test_frontmatter.py  test_graph_engine.py  test_http.py  test_inspect.py  test_link.py  test_llm.py  test_neo4j_engine.py  test_node.py  test_openalex.py  test_openalex_pool.py  test_promote.py  test_schema.py  test_semantic.py  test_semanticscholar.py  test_slug.py  test_snapshot.py  test_sync.py  (+4 more)
(+3 files in other folders)
